--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.2.5",
+    "@actions/glob": "^0.1.0",
+    "@actions/io": "^1.0.2",
+    "@types/node-dir": "0.0.33",
+    "glob": "^7.1.6",
+    "node-dir": "^0.1.17"
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
