--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,8 @@
 name: 'Banner Checker'
 description: 'Validate your files begin with a specific banner for compliance reasons'
 author: 'Antonios Katopodis'
-icon: align-justify
+branding:
+  icon: align-justify
 inputs:
   banner:
     required: true
