--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,7 @@ description: 'Validate your files begin with a specific banner for compliance re
 author: 'Antonios Katopodis'
 branding:
   icon: align-justify
+  color: blue
 inputs:
   banner:
     required: true
